Make sure toolkit call to action doesn't wrap

--- a/stylesheets/shared-package/default.css
+++ b/stylesheets/shared-package/default.css
@@ -2949,6 +2949,10 @@ a.proficient-badge.disabled {
     margin-right: 5px;
 }
 
+#homepage-text .try-teacher-toolkit {
+    white-space: nowrap;
+}
+
 #back-to-top {
     position: fixed;
     bottom: 32px;
